# msicon-extractor

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  README  config.h.in  configure.ac
src/: Makefile.am  extract-common.c  extract-common.h  extract-icon.c  extract-icon.h  extract-pe.c  extract-pe.h  file.c  file.h  icon-dir.h  iconbmp2png.c  iconbmp2png.h  main.c  pe.h  write-icons.c  write-icons.h
test/: Makefile.am  test.c  util.c  util.h
test/data/extracted-data-to-compare/ff4bpp.ico/32/: 48x48
test/data/extracted-data-to-compare/firefox.exe/32/: 48x48
test/data/extracted-data-to-compare/firefox.exe/4/: 16x16  32x32  48x48
test/data/extracted-data-to-compare/firefox.exe/8/: 32x32  48x48
test/data/extracted-data-to-compare/firefox64.exe/16/: 48x48
test/data/extracted-data-to-compare/firefox64.exe/24/: 16x16
test/data/extracted-data-to-compare/firefox64.exe/32/: 16x16  256x256  32x32  48x48
test/data/extracted-data-to-compare/firefox64.exe/4/: 16x16  32x32  48x48
test/data/extracted-data-to-compare/firefox64.exe/8/: 32x32
